2005-03-21  Nick Clifton  <nickc@redhat.com>

	* gas/arm/iwmmxt.s: Update instructions that use the "never" value
	in the conditional field to use "le" instead.  This is so that the
	disassembler will disassemble them.
	* gas/arm/iwmmxt.d: Update expected disassemblies.

2005-03-17  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intel.d: Add stderr directive. 
	* gas/i386/intel.e: New.
	* gas/i386/intel16.d: Add stderr directive. Adjust for changed
	source.
	* gas/i386/intel16.e: New.
	* gas/i386/intel16.s: Add instances of addressing forms with base
	and index specified in reverse order.
	* gas/i386/intelbad.l: Adjust for changed source.
	* gas/i386/intelbad.s: Add more operand forms to check.
	* gas/i386/intelok.d: Remove -r from objdump options. Add stderr
	directive. Adjust for changed source.
	* gas/i386/intelok.e: New.
	* gas/i386/intelok.s: Define MASM constants byte, word, etc. Add
	more operand forms to check.
	* gas/i386/x86_64.d: Add stderr directive.
	* gas/i386/x86_64.e: New.
	* gas/i386/x86_64.s: Adjust for parser changes.

2005-03-15  Zack Weinberg  <zack@codesourcery.com>

	* gas/arm/archv6t2.d, gas/arm/archv6t2.s: New dump test.
	* gas/arm/archv6t2-bad.l, gas/arm/archv6t2-bad.l: New errors test.
	* gas/arm/arm.exp: Run them.

2005-03-14  Eric Christopher  <echristo@redhat.com>

	* gas/cfi/cfi-mips-1.d, gas/cfi/cfi-mips-1.s: New dump test.
	* gas/cfi/cfi.exp: Run it.
	* gas/cfi/cfi-common-1.d: Update.
	* gas/cfi/cfi-common-2.d: Ditto.
	* gas/cfi/cfi-common-3.d: Ditto.
	* gas/cfi/cfi-common-4.d: Ditto.

2005-03-12  Zack Weinberg  <zack@codesourcery.com>

	* gas/arm/thumbv6k.d, gas/arm/thumbv6k.s: New dump test.
	* gas/arm/arm.exp: Run it.

2005-03-10  Aldy Hernandez  <aldyh@redhat.com>

	* gas/ppc/e500.d: Fix encoding of efscfd.

2005-03-10  Jeff Baker  <jbaker@qnx.com>
	    Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/booke.s: Add new m[t,f]sprg testcases.
	* gas/ppc/booke.d: Likewise.

2005-03-09  Richard Sandiford  <rsandifo@redhat.com>
